--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,11 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 add_definitions(-DASIO_STANDALONE)
 add_definitions(-DVERSION="${PROJECT_VERSION}")
 
-add_executable(${PROJECT_NAME} src/player.cpp)
+add_executable(${PROJECT_NAME}
+    src/amcp.cpp
+    src/amcp.hpp
+    src/player.cpp
+)
 
 include(GNUInstallDirs)
 install(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_BINDIR})
