--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,12 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 add_definitions(-DASIO_STANDALONE -DASIO_NO_DEPRECATED)
 add_definitions(-DVERSION="${PROJECT_VERSION}")
 
-add_executable(${PROJECT_NAME} src/amcp.hpp src/main.cpp src/osc.hpp)
+add_executable(${PROJECT_NAME}
+    src/amcp.hpp
+    src/main.cpp
+    src/osc.hpp
+    src/types.hpp
+)
 target_link_libraries(${PROJECT_NAME} osc++)
 
 include(GNUInstallDirs)
